Fixed z-index of sidenav

--- a/src/main/webui/css/custom.css
+++ b/src/main/webui/css/custom.css
@@ -234,7 +234,7 @@ input[type=number]:hover {
 	background-color: #f2f2f2;
 	top: 0;
 	right: 0;
-	z-index: 2;
+	z-index: 3;
 	overflow-x: hidden;
 	transition: 0.5s;
 }
